--- a/src/components/_ThemeToggle.scss
+++ b/src/components/_ThemeToggle.scss
@@ -4,62 +4,84 @@
   display: flex;
   align-items: center;
 
+  @include mobile {
+    justify-content: center;
+  }
+
   p {
     margin: -1px 0 0 12px;
   }
-}
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
+  .switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
 
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
+    input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
 
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      -webkit-transition: 0.4s;
+      transition: 0.4s;
+    }
 
-.slider:before {
-  position: absolute;
-  content: '';
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: 0.4s;
-  transition: 0.25s;
-}
+    .slider:before,
+    .slider:after {
+      position: absolute;
+      content: '';
+      height: 26px;
+      width: 26px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      -webkit-transition: 0.4s;
+      transition: 0.25s;
+    }
+    .slider:after {
+      width: 0;
+      height: 0;
+      background-color: transparent;
+      left: 2px;
+      bottom: 24px;
+    }
 
-input:checked + .slider {
-  background-color: var(--blue);
-}
+    input:checked + .slider {
+      background-color: var(--blue);
+    }
 
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
+    input:checked + .slider:before {
+      -webkit-transform: translateX(26px);
+      -ms-transform: translateX(26px);
+      transform: translateX(26px);
+    }
+    input:checked + .slider:after {
+      -webkit-transform: translateX(26px);
+      -ms-transform: translateX(26px);
+      transform: translateX(26px);
+      background-color: var(--blue);
+      width: 22px;
+      height: 22px;
+      bottom: 9px;
+    }
 
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
+    /* Rounded sliders */
+    .slider.round {
+      border-radius: 34px;
+    }
 
-.slider.round:before {
-  border-radius: 50%;
+    .slider.round:before,
+    .slider.round:after {
+      border-radius: 50%;
+    }
+  }
 }
