--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -31,6 +31,7 @@ body.dark-theme {
   --white: #f6f6f6;
 
   --blue: #0052ff;
+  --blue-rgb: 0, 82, 255;
   --blue-light: #4069f9;
   --blue-light-rgb: 64, 105, 249;
 
